core-0.0.1-BUILD add status model