@@ -2,12 +2,29 @@ name := """com.osbsg.api"""
 
 version := "1.0-SNAPSHOT"
 
-lazy val root = (project in file(".")).enablePlugins(PlayJava)
+lazy val root = (project in file(".")).enablePlugins(PlayJava, PlayEbean).dependsOn(core).aggregate(core)
+lazy val core = (project in file("modules/core")).enablePlugins(PlayJava, PlayEbean)
+
 
 scalaVersion := "2.11.7"
 
 libraryDependencies ++= Seq(
   javaJdbc,
   cache,
-  javaWs
+  javaWs,
+  "mysql" % "mysql-connector-java" % "6.0.5"
+)
+
+playEbeanModels in Compile := Seq("models.*")
+playEbeanDebugLevel := 4
+playEbeanAgentArgs += ("detect" -> "false")
+inConfig(Test)(PlayEbean.scopedSettings)
+playEbeanModels in Test := Seq("models.*")
+
+javaOptions in Test ++= Seq(
+  "-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=9998",
+  "-Xms512M",
+  "-Xmx1536M",
+  "-Xss1M",
+  "-XX:MaxPermSize=384M"
 )
